--- a/sales-web/src/app/private/customers/customers-form/customers-form.component.scss
+++ b/sales-web/src/app/private/customers/customers-form/customers-form.component.scss
@@ -1,7 +1,1 @@
-.field.error .control--input input {
-  border-color: #ef4444;
-}
-
-.field.error label {
-  color: #ef4444;
-}
+@import '../../../../styles/forms';
