--- a/sales-web/src/app/private/products/products-form/products-form.component.scss
+++ b/sales-web/src/app/private/products/products-form/products-form.component.scss
@@ -1,9 +1,1 @@
-.field.error .control--input input,
-.field.error .control--input textarea,
-.field.error .control--select select {
-  border-color: #ef4444;
-}
-
-.field.error label {
-  color: #ef4444;
-}
+@import '../../../../styles/forms';
